[gd_scene load_steps=9 format=3 uid="uid://vt5mwwxhtu3x"]

[ext_resource type="Script" path="res://addons/ggs/editor/setting_panel/setting_panel.gd" id="1_2wlv0"]
[ext_resource type="Texture2D" uid="uid://bttv2hpecd38m" path="res://addons/ggs/assets/check_all.svg" id="3_bh7l7"]
[ext_resource type="Texture2D" uid="uid://by345a10evjm8" path="res://addons/ggs/assets/add.svg" id="3_tdauq"]
[ext_resource type="Script" path="res://addons/ggs/editor/setting_panel/setting_list.gd" id="4_htr8u"]
[ext_resource type="Texture2D" uid="uid://ve54bl3r7ljc" path="res://addons/ggs/assets/reload.svg" id="4_j6whk"]
[ext_resource type="Texture2D" uid="uid://romr61n4g5y5" path="res://addons/ggs/assets/uncheck_all.svg" id="4_q4gh6"]
[ext_resource type="Script" path="res://addons/ggs/editor/setting_panel/groupless.gd" id="7_l1jd4"]
[ext_resource type="PackedScene" uid="uid://111vt7wxn7lx" path="res://addons/ggs/editor/add_setting_window/add_setting_window.tscn" id="7_o4e63"]

[node name="SettingPanel" type="Control"]
custom_minimum_size = Vector2(342, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2wlv0")

[node name="MainCtnr" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="HBoxContainer" parent="MainCtnr"]
layout_mode = 2

[node name="AddBtn" type="Button" parent="MainCtnr/TopBar"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Add Setting from Template"
disabled = true
icon = ExtResource("3_tdauq")
flat = true

[node name="NewSettingField" type="LineEdit" parent="MainCtnr/TopBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "New Setting..."
editable = false
clear_button_enabled = true

[node name="NewGroupField" type="LineEdit" parent="MainCtnr/TopBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "New Group..."
editable = false
clear_button_enabled = true

[node name="VSep" type="VSeparator" parent="MainCtnr/TopBar"]
layout_mode = 2

[node name="CheckAllBtn" type="Button" parent="MainCtnr/TopBar"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Check All"
disabled = true
icon = ExtResource("3_bh7l7")
flat = true

[node name="UncheckAllBtn" type="Button" parent="MainCtnr/TopBar"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Uncheck All"
disabled = true
icon = ExtResource("4_q4gh6")
flat = true

[node name="ReloadBtn" type="Button" parent="MainCtnr/TopBar"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Reload List"
disabled = true
icon = ExtResource("4_j6whk")
flat = true

[node name="SettingList" type="ScrollContainer" parent="MainCtnr"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
script = ExtResource("4_htr8u")

[node name="PanelCtnr" type="PanelContainer" parent="MainCtnr/SettingList"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = &"SettingListBG"

[node name="MainCtnr" type="HFlowContainer" parent="MainCtnr/SettingList/PanelCtnr"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10

[node name="GroupLess" type="PanelContainer" parent="MainCtnr/SettingList/PanelCtnr/MainCtnr"]
visible = false
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"SettingItemBG"
script = ExtResource("7_l1jd4")

[node name="MainCtnr" type="HFlowContainer" parent="MainCtnr/SettingList/PanelCtnr/MainCtnr/GroupLess"]
layout_mode = 2

[node name="AddSettingWindow" parent="." instance=ExtResource("7_o4e63")]
